<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lightOrchid"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:paddingStart="5dp"
        android:text="@string/state_ut"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center|end"
        android:text="@string/cnfrmd"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center|end"
        android:text="@string/vacc"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center|end"
        android:text="@string/rcvd"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center|end"
        android:paddingEnd="5dp"
        android:text="@string/dcsd"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="12sp" />
</LinearLayout>
