<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lastUpdatedTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/last_updated"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/iconsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lastUpdatedTv"
        android:layout_marginTop="5dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/confirmed"
                android:textAllCaps="true"
                android:textColor="@color/red"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_virus"
                app:tint="@color/red" />

            <TextView
                android:id="@+id/tvConfirmed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="@color/red"
                android:textAlignment="viewEnd"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/vaccinated"
                android:textAllCaps="true"
                android:textColor="@color/blue"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_vaccine"
                app:tint="@color/blue"/>

            <TextView
                android:id="@+id/tvVaccinated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textAlignment="viewEnd"
                android:textColor="@color/blue"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/recovered"
                android:textAllCaps="true"
                android:textColor="@color/green"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_heart"
                app:tint="@color/green"/>

            <TextView
                android:id="@+id/tvRecovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textAlignment="viewEnd"
                android:textColor="@color/green"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/deceased"
                android:textAllCaps="true"
                android:textColor="@color/yellow"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_death"
                app:tint="@color/yellow"/>

            <TextView
                android:id="@+id/tvDeceased"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textAlignment="viewEnd"
                android:textColor="@color/yellow"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/list_header"
        android:id="@+id/header"
        android:layout_below="@id/iconsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

    <ListView
        android:id="@+id/lvStatewise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"/>

</RelativeLayout>